# ReSSPublica

./: .gitignore  CONTRIBUTING.md  README.md  flake.nix  pyproject.toml  resspublica.py
.cache/: README.md  bernAsianHornet.json  bernReligionMapByReligionCount.json  federalInitiatives.json
.github/workflows/: build-feeds.yml
assets/: README.md
assets/swissBOUNDARIES3D_1_5_LV95_LN02.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.CatRelsByType.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a0000000b.gdbtable  a0000000b.gdbtablx  a0000000c.gdbtablx  a0000000c.horizon  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000f.gdbtablx  timestamps
feed/atom/de/: eidgenossischVolksinitiativen.atom  gotteshauserNachReligionImKantonBern.atom  initiativesPopulairesFederales.atom  sichtungenAsiatischerHornissenBern.atom
feed/atom/en/: asianHornetSightingsInBern.atom
feed/atom/fr/: initiativesPopulairesFederales.atom  lieuDeCulteParReligionDansLeCantonDeBerne.atom  observationsFrelonsAsiatiquesBerne.atom
other/helpScripts/: referendumTypeBrutforce.sh
queries/: federalPopularInitiatives.sparql
resspublica/: __init__.py  bernAsianHornet.py  bernReligionMap.py  federalInitiativesFeeds.py  main.py  translations.py  utils.py
resspublica/queries/: federalPopularInitiatives.sparql
(+16 files in other folders)
