[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resspublica"
version = "0.1"
description = "RSS feeds for swiss federal and cantonal initiatives."
requires-python = ">=3.10"
dependencies = [
  "SPARQLWrapper",
  "feedgen"
]

[project.scripts]
resspublica = "resspublica.main:main"

[tool.setuptools]
packages = ["resspublica"]
include-package-data = true

[tool.setuptools.package-data]
resspublica = ["queries/*.sparql"]
